# floris-wake-map

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: check-working-examples.yaml  continuous-integration-workflow.yaml
examples/: 01_basic_usage.py  01_basic_visualization.py  02_save_and_reload.py  02_visualizing_WakeMaps.py  03_basic_visualization_extonly.py  03_exclusion_zones.py  03_save_and_reload.py  03b_basic_visualization_extonly_het.py  04_area_selection.py  04_full_wind_rose_example_extonly.py  04b_plot_from_load.py  05_basic_exclusion_zones.py  05a_run_large_WakeMap.py  05b_investigate_large_WakeMap.ipynb  06_area_selection.py  example_05_raw_expected_powers.npz
examples/parking_lot/: 03_basic_visualization_extonly.py  03b_basic_visualization_extonly_het.py  04_full_wind_rose_example_extonly.py  04b_plot_from_load.py
floriswakemap/: __init__.py  area_selector.py  wake_map.py
tests/: temporary_test.py  wake_map_test.py
wakemap/: __init__.py  area_selector.py  wake_map.py
